--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <!--Scripts-->
 
     <!--Styles-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -26,14 +26,33 @@
     </header>
     <main>
         <section.content>
-            <h2></h2>
-            <!--About/Portfolio/Contact specific content-->
+            <h2>Portfolio</h2>
+            <div class="container">
+                <img src="./assets/images/Vikings.png" alt="Minnesota Vikings">
+                <div>Minnesota Vikings</div>
+            </div>
+            <div>
+                <img src="./assets/images/calligraphy.png" alt="Calligraphy">
+                <div>Calligraphy</div>
+            </div>
+            <div>
+                <img src="./assets/images/tourdecure.png" alt="Tour de Cure">
+                <div>Tour De Cure</div>
+            </div>
+            <div>
+                <img src="./assets/images/minneapoliscf.png" alt="Minneapolis CF">
+                <div>CrossFit</div>
+            </div>
+            <div>
+                <img src="./assets/images/umn.png" alt="UMN">
+                <div>University of Minnesota</div>
+            </div>
         </section.content>
         <section.sidebar>
             <h2>Connect with Me</h2>
-            <div><a href="https://github.com/madisonkoch"><img src="./Images/github.png" alt=""></a></div>
-            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./Images/Linkedin.png" alt=""></a></div>
-            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./Images/stackoverflow.png" alt=""></a></div>
+            <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt="GitHub"></a></div>
+            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt="LinkedIn"></a></div>
+            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt="StackOverflow"></a></div>
         </section.sidebar>
     </main>
     <footer>
