--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-    <title>Document</title>
+    <title>Basic Profile</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
     <!--Scripts-->
 
     <!--Styles-->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -26,14 +26,27 @@
     </header>
     <main>
         <section.content>
-            <h2></h2>
-            <!--About/Portfolio/Contact specific content-->
+            <h2>Contact</h2>
+            <form>
+                <label>
+                    Name
+                    <input type="text">
+                </label>
+                <label>
+                    Email
+                    <input type="text">
+                </label>
+                <label>
+                    Message
+                    <input type="textarea">
+                </label>
+            </form>
         </section.content>
         <section.sidebar>
             <h2>Connect with Me</h2>
-            <div><a href="https://github.com/madisonkoch"><img src="./Images/github.png" alt=""></a></div>
-            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./Images/Linkedin.png" alt=""></a></div>
-            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./Images/stackoverflow.png" alt=""></a></div>
+            <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt=""></a></div>
+            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt=""></a></div>
+            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt=""></a></div>
         </section.sidebar>
     </main>
     <footer>
