Setup Header/Body & Main sections

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     
 <head>
-    <title>Document</title>
+    <title>Basic-Portfolio</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,6 +27,7 @@
     <main>
         <section.content>
             <h2>Portfolio</h2>
+            <hr>
             <div class="container">
                 <img src="./assets/images/Vikings.png" alt="Minnesota Vikings">
                 <div>Minnesota Vikings</div>
@@ -50,6 +51,7 @@
         </section.content>
         <section.sidebar>
             <h2>Connect with Me</h2>
+            <hr>
             <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt="GitHub"></a></div>
             <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt="LinkedIn"></a></div>
             <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt="StackOverflow"></a></div>
