--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     
 <head>
-    <title>Basic Profile</title>
+    <title>Basic-Portfolio</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,19 +14,22 @@
 </head>
 
 <body>
-    <header>    
-        <h1>Madison Koch</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+    <header>  
+        <div class="header">
+            <h1>Madison Koch</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section.content>
             <h2>Contact</h2>
+            <hr>
             <form>
                 <label>
                     Name
@@ -44,6 +47,7 @@
         </section.content>
         <section.sidebar>
             <h2>Connect with Me</h2>
+            <hr>
             <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt=""></a></div>
             <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt=""></a></div>
             <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt=""></a></div>
