--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Document</title>
+    <title>Basic-Porfolio</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,46 +15,56 @@
 
 <body>
     <header>    
-        <h1>Madison Koch</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header">
+            <h1 align="center">Madison Koch</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <section.content>
+        <section class="content">
             <h2>About Me</h2>
-            <div><img src="./assets/images/" alt="profile picture"></div>
-            <p>
-                Now this is the story all about how my life got flipped, turned upside down.
-                 And I'd like to take a minute just sit right there I'll tell ya how I came to a city called Minneapolis.
-                 In eastern Iowa born and raised in the middle of corn fields is where I spent most of my days...
-            </p>
-            <p.1>Well that's as far I get before nothing rhymes, so here's the rest of the story:</p.1>
-            <p>
-                I grew up in a town of less than 500 and graduated high school with 48 other students in 2012.
-                 Through some turns of fate I ended up on the University of Minnesota's Varsity Women's Rowing team.
-                 These unexpected turns afforded me a full-scholarship and the time to graduate with a Bachelor's of Science in Psychology with minors in Statistics and Sports Management.
-                 As if I hadn't already been bless with opportunity, fate also had it so that I met my current boss in a marketing class during my last semester of college.
-                 Meeting him lead to an internship with the Minnesota Vikings, wherein I became full-time.
-                 Being in a more permanent I was then able to propose all of the benefits coding could bring to our day-to-day and, VOILA, here I am! 
-            </p>
-            <p>
-                 Outside of work and class I do/enjoy CrossFit (my newest adventure), calligraphy, reading, cycling and volunteering with the American Diabetes Association's Tour de Cure Ride/Run/Walk.
-                 In fact, I'll be riding in the Tour de Cure's 100 mile race - JOIN ME!
-                 If you don't think the 100 mile bike ride is for you check out the other walk/run/bike distances in the link below.
-            </p>
-            <p><a href="https://donations.diabetes.org/site/SPageServer/;jsessionid=00000000.app243b?NONCE_TOKEN=A5E5AD62C47143547BCF115D38C14AD1&pagename=TC_homepage">Minnesota 2018 Tour de Cure</a></p>
-        </section.content>
-        <section.sidebar>
+            <hr>
+            <div><img src="./assets/images/profilepicmk.png" alt="profile picture" width="200px"></div>
+            <div class="bio">
+                <p>
+                    Now this is the story all about how my life got flipped, turned upside down.
+                    And I'd like to take a minute just sit right there I'll tell ya how I came to a city called Minneapolis.
+                    In eastern Iowa born and raised in the middle of corn fields is where I spent most of my days...
+                </p>
+                <p>
+                    Well that's as far I get before nothing rhymes, so here's the rest of the story:</p.1>
+                </p>
+                <p>
+                    I grew up in a town of less than 500 and graduated high school with 48 other students in 2012.
+                    Through some turns of fate I ended up on the University of Minnesota's Varsity Women's Rowing team.
+                    These unexpected turns afforded me a full-scholarship and the time to graduate with a Bachelor's of Science in Psychology with minors in Statistics and Sports Management.
+                    As if I hadn't already been bless with opportunity, fate also had it so that I met my current boss in a marketing class during my last semester of college.
+                    Meeting him lead to an internship with the Minnesota Vikings, wherein I became full-time.
+                    Being in a more permanent I was then able to propose all of the benefits coding could bring to our day-to-day and, VOILA, here I am! 
+                </p>    
+                <p>
+                    Outside of work and class I do/enjoy CrossFit (my newest adventure), calligraphy, reading, cycling and volunteering with the American Diabetes Association's Tour de Cure Ride/Run/Walk.
+                    In fact, I'll be riding in the Tour de Cure's 100 mile race - 
+                    <a href="https://donations.diabetes.org/site/SPageServer/;jsessionid=00000000.app243b?NONCE_TOKEN=A5E5AD62C47143547BCF115D38C14AD1&pagename=TC_homepage">JOIN ME!</a>
+                    If you don't think the 100 mile bike ride is for you check out the other walk/run/bike distances in the link below.
+                </p>
+            </div>
+        </section>
+        <section class="sidebar">
             <h2>Connect with Me</h2>
-            <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt=""></a></div>
-            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt=""></a></div>
-            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt=""></a></div>
-        </section.sidebar>
+            <hr>
+            <div class="connect">
+                <div><a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a></div>
+                <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a></div>
+                <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img class="social" src="./assets/Images/stackoverflow.png" alt=""></a></div>
+            </div>  
+            </section>
     </main>
     <footer>
         <p>&#169 Copyright 2018 Maison Koch</p>
