Fixed Footer, Position of content, and connect img

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </p>
                 <p>
                     I grew up in a town of less than 500 and graduated high school with 48 other students in 2012.
-                    Through some turns of fate I ended up on the University of Minnesota's Varsity Women's Rowing team.
+                    Through some turns of fate I ended up at the University of Minnesota on their Varsity Women's Rowing team.
                     These unexpected turns afforded me a full-scholarship and the time to graduate with a Bachelor's of Science in Psychology with minors in Statistics and Sports Management.
                     As if I hadn't already been bless with opportunity, fate also had it so that I met my current boss in a marketing class during my last semester of college.
                     Meeting him lead to an internship with the Minnesota Vikings, wherein I became full-time.
@@ -60,9 +60,9 @@
             <h2>Connect with Me</h2>
             <hr>
             <div class="connect">
-                <div><a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a></div>
-                <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a></div>
-                <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img class="social" src="./assets/Images/stackoverflow.png" alt=""></a></div>
+                <a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a>
+                <a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img class="social" src="./assets/Images/stackoverflow.png" alt=""></a>
             </div>
             </section>
     </main>
