All but footer and Portfolio/Contact content container

--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    <title>Basic-Portfolio</title>
+    <title>Basic-Porfolio</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-    <header>  
+    <header>    
         <div class="header">
-            <h1>Madison Koch</h1>
+            <h1 align="center">Madison Koch</h1>
             <nav>
                 <ul>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <section.content>
+        <section class="content">
             <h2>Contact</h2>
             <hr>
             <form>
@@ -44,17 +44,19 @@
                     <input type="textarea">
                 </label>
             </form>
-        </section.content>
-        <section.sidebar>
+        </section>
+        <section class="sidebar">
             <h2>Connect with Me</h2>
             <hr>
-            <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt=""></a></div>
-            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt=""></a></div>
-            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt=""></a></div>
-        </section.sidebar>
+            <div class="connect">
+                <a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a>
+                <a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img class="social" src="./assets/Images/stackoverflow.png" alt=""></a>
+            </div>
+            </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Maison Koch</p>
+        <p>&#169 Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
