--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Maison Koch</p>
+        <p>&#169 Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
