--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="flex">
     <header>    
         <div class="header">
             <h1 align="center">Madison Koch</h1>
@@ -21,12 +21,12 @@
                 <ul>
                     <li><a href="index.html">About</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <main>
+    <main class = "flex-content">
         <section class="content">
             <h2>Contact</h2>
             <hr>
