--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="flex">
     <header>    
         <div class="header">
             <h1 align="center">Madison Koch</h1>
