--- a/portfolio.html
+++ b/portfolio.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    
+
 <head>
-    <title>Basic-Portfolio</title>
+    <title>Basic-Porfolio</title>
     <!--Meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,52 +13,68 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="flex">
     <header>    
-        <h1>Madison Koch</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header">
+            <h1 align="center">Madison Koch</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">About</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <main>
-        <section.content>
-            <h2>Portfolio</h2>
-            <hr>
-            <div class="container">
-                <img src="./assets/images/Vikings.png" alt="Minnesota Vikings">
-                <div>Minnesota Vikings</div>
-            </div>
-            <div>
-                <img src="./assets/images/calligraphy.png" alt="Calligraphy">
-                <div>Calligraphy</div>
-            </div>
-            <div>
-                <img src="./assets/images/tourdecure.png" alt="Tour de Cure">
-                <div>Tour De Cure</div>
-            </div>
-            <div>
-                <img src="./assets/images/minneapoliscf.png" alt="Minneapolis CF">
-                <div>CrossFit</div>
-            </div>
-            <div>
-                <img src="./assets/images/umn.png" alt="UMN">
-                <div>University of Minnesota</div>
-            </div>
-        </section.content>
-        <section.sidebar>
+    <main class = "flex-content">
+        <section class="content">
+                <h2>Portfolio</h2>
+                <hr>
+                <section class="flex-portfolio">
+                    <div class = "container">
+                        <img class="port-img" src="./assets/images/Vikings.png" alt="Minnesota Vikings">
+                        <div class="img-text">
+                            <h3>Minnesota Vikings</h3>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img class="port-img" src="./assets/images/calligraphy.png" alt="Calligraphy">
+                        <div class="img-text">
+                            <h3>Calligraphy</h2>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img class="port-img" src="./assets/images/tourdecure.png" alt="Tour de Cure">
+                        <div class="img-text">
+                             <h3>Tour De Cure</h2>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img class="port-img" src="./assets/images/minneapoliscf.png" alt="Minneapolis CF">
+                        <div class="img-text">
+                            <h3>CrossFit</h2>
+                        </div>
+                    </div>
+                    <div class = "container">
+                        <img class="port-img" src="./assets/images/umn.png" alt="UMN">
+                        <div class="img-text">
+                            <h3>University of Minnesota</h2>
+                        </div>
+                    </div>
+                </section>
+        </section>
+        <section class="sidebar">
             <h2>Connect with Me</h2>
             <hr>
-            <div><a href="https://github.com/madisonkoch"><img src="./assets/Images/github.png" alt="GitHub"></a></div>
-            <div><a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img src="./assets/Images/Linkedin.png" alt="LinkedIn"></a></div>
-            <div><a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img src="./assets/Images/stackoverflow.png" alt="StackOverflow"></a></div>
-        </section.sidebar>
+            <div class="connect">
+                <a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a>
+                <a href="https://stackoverflow.com/users/8941347/madison-koch?tab=profile"><img class="social" src="./assets/Images/stackoverflow.png" alt=""></a>
+            </div>
+            </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Maison Koch</p>
+        <p>&#169 Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
