All done! Just tweak it to the very specific dimensions of the screen shots & add extras

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
         <section class="content">
             <h2>About Me</h2>
-            <hr>
+            <hr class="hr1">
             <div><img src="./assets/images/profilepicmk.png" alt="profile picture" width="200px"></div>
             <div class="bio">
                 <p>
@@ -51,14 +51,14 @@
                 <p>
                     Outside of work and class I do/enjoy CrossFit (my newest adventure), calligraphy, reading, cycling and volunteering with the American Diabetes Association's Tour de Cure Ride/Run/Walk.
                     In fact, I'll be riding in the Tour de Cure's 100 mile race - 
-                    <a href="https://donations.diabetes.org/site/SPageServer/;jsessionid=00000000.app243b?NONCE_TOKEN=A5E5AD62C47143547BCF115D38C14AD1&pagename=TC_homepage">JOIN ME!</a>
-                    If you don't think the 100 mile bike ride is for you check out the other walk/run/bike distances in the link below.
+                    <a class="joinme" href="https://donations.diabetes.org/site/SPageServer/;jsessionid=00000000.app243b?NONCE_TOKEN=A5E5AD62C47143547BCF115D38C14AD1&pagename=TC_homepage">JOIN ME!</a>
+                    If you don't think the 100 mile bike ride is for you check out the other walk/run/bike distances by clicking "join me".
                 </p>
             </div>
         </section>
         <section class="sidebar">
             <h2>Connect with Me</h2>
-            <hr>
+            <hr class="hr2">
             <div class="connect">
                 <a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a>
