--- a/portfolio.html
+++ b/portfolio.html
@@ -29,34 +29,34 @@
     <main class = "flex-content">
         <section class="content">
                 <h2>Portfolio</h2>
-                <hr>
+                <hr class="hr1">
                 <section class="flex-portfolio">
                     <div class = "container">
-                        <img class="port-img" src="./assets/images/Vikings.png" alt="Minnesota Vikings">
+                        <img class="port-img" src="./assets/images/Vikings2.png" alt="Minnesota Vikings">
                         <div class="img-text">
                             <h3>Minnesota Vikings</h3>
                         </div>
                     </div>
                     <div class = "container">
-                        <img class="port-img" src="./assets/images/calligraphy.png" alt="Calligraphy">
+                        <img class="port-img" src="./assets/images/calligraphy2.png" alt="Calligraphy">
                         <div class="img-text">
                             <h3>Calligraphy</h2>
                         </div>
                     </div>
                     <div class = "container">
-                        <img class="port-img" src="./assets/images/tourdecure.png" alt="Tour de Cure">
+                        <img class="port-img" src="./assets/images/tourdecure2.png" alt="Tour de Cure">
                         <div class="img-text">
                              <h3>Tour De Cure</h2>
                         </div>
                     </div>
                     <div class = "container">
-                        <img class="port-img" src="./assets/images/minneapoliscf.png" alt="Minneapolis CF">
+                        <img class="port-img" src="./assets/images/minneapoliscf2.png" alt="Minneapolis CF">
                         <div class="img-text">
                             <h3>CrossFit</h2>
                         </div>
                     </div>
                     <div class = "container">
-                        <img class="port-img" src="./assets/images/umn.png" alt="UMN">
+                        <img class="port-img" src="./assets/images/umn2.png" alt="UMN">
                         <div class="img-text">
                             <h3>University of Minnesota</h2>
                         </div>
@@ -65,7 +65,7 @@
         </section>
         <section class="sidebar">
             <h2>Connect with Me</h2>
-            <hr>
+            <hr class="hr2">
             <div class="connect">
                 <a href="https://github.com/madisonkoch"><img class="social" src="./assets/Images/github.png" alt=""></a>
                 <a href="https://www.linkedin.com/in/madison-koch-mnvikings/"><img class="social" src="./assets/Images/Linkedin.png" alt=""></a>
