Verified HTML + remove CSS error

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body class="flex">
     <header>    
         <div class="header">
-            <h1 align="center">Madison Koch</h1>
+            <h1>Madison Koch</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">About</a></li>
@@ -50,7 +50,7 @@
             </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Madison Koch</p>
+        <p>&#169; Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
