--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="flex">
     <header>    
         <div class="header">
-            <h1 align="center">Madison Koch</h1>
+            <h1>Madison Koch</h1>
             <nav>
                 <ul>
                     <li><a href="#">About</a></li>
@@ -30,7 +30,7 @@
         <section class="content">
             <h2>About Me</h2>
             <hr class="hr1">
-            <div><img src="./assets/images/profilepicmk.png" alt="profile picture" width="200px"></div>
+            <div><img class="profilepic" src="./assets/images/profilepicmk.png" alt="profile picture"></div>
             <div class="bio">
                 <p>
                     Now this is the story all about how my life got flipped, turned upside down.
@@ -38,7 +38,7 @@
                     In eastern Iowa born and raised in the middle of corn fields is where I spent most of my days...
                 </p>
                 <p>
-                    Well that's as far I get before nothing rhymes, so here's the rest of the story:</p.1>
+                    Well that's as far I get before nothing rhymes, so here's the rest of the story:
                 </p>
                 <p>
                     I grew up in a town of less than 500 and graduated high school with 48 other students in 2012.
@@ -67,7 +67,7 @@
             </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Madison Koch</p>
+        <p>&#169; Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
