--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 <body class="flex">
     <header>    
         <div class="header">
-            <h1 align="center">Madison Koch</h1>
+            <h1>Madison Koch</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">About</a></li>
@@ -40,25 +40,25 @@
                     <div class = "container">
                         <img class="port-img" src="./assets/images/calligraphy2.png" alt="Calligraphy">
                         <div class="img-text">
-                            <h3>Calligraphy</h2>
+                            <h3>Calligraphy</h3>
                         </div>
                     </div>
                     <div class = "container">
                         <img class="port-img" src="./assets/images/tourdecure2.png" alt="Tour de Cure">
                         <div class="img-text">
-                             <h3>Tour De Cure</h2>
+                             <h3>Tour De Cure</h3>
                         </div>
                     </div>
                     <div class = "container">
                         <img class="port-img" src="./assets/images/minneapoliscf2.png" alt="Minneapolis CF">
                         <div class="img-text">
-                            <h3>CrossFit</h2>
+                            <h3>CrossFit</h3>
                         </div>
                     </div>
                     <div class = "container">
                         <img class="port-img" src="./assets/images/umn2.png" alt="UMN">
                         <div class="img-text">
-                            <h3>University of Minnesota</h2>
+                            <h3>University of Minnesota</h3>
                         </div>
                     </div>
                 </section>
@@ -74,7 +74,7 @@
             </section>
     </main>
     <footer>
-        <p>&#169 Copyright 2018 Madison Koch</p>
+        <p>&#169; Copyright 2018 Madison Koch</p>
     </footer>
 </body>
 
